# whalewatcher

./: README.md  com.github.avojak.whalewatcher.yml  install-dev-dependencies.sh  meson.build
data/: com.github.avojak.whalewatcher.appdata.xml.in.in  com.github.avojak.whalewatcher.desktop.in.in  com.github.avojak.whalewatcher.gschema.xml.in  meson.build
debian/: changelog  control
po/extra/: POTFILES
src/: Application.vala  MainLayout.vala  MainWindow.vala  meson.build
src/Layouts/: MainLayout.vala
src/Models/: DockerContainer.vala  DockerEngineErrorResponse.vala  DockerImage.vala  DockerImageDetails.vala  DockerImageLayer.vala  DockerImageSummary.vala  DockerServerState.vala  DockerSystemDataUsage.vala  DockerVersion.vala  DockerVolume.vala  DockerVolumes.vala
src/Models/Events/: ContainerEvent.vala  DockerEngineEvent.vala  ImageEvent.vala
src/Services/: DockerClient.vala  DockerService.vala  DockerSocketClient.vala  SocketRestClient.vala
src/Util/: JsonUtils.vala
src/Views/: ContainerPage.vala  ContainersView.vala  ContainersView[OLD].vala  ErrorView.vala  ImageTagView.vala  ImagesView.vala  ImagesView[OLD].vala  LoadingView.vala  NetworksView.vala  VolumeView.vala  VolumesView.vala  WelcomeView.vala
src/Views/Images/: BrowseImagesView.vala  InspectImageView.vala
src/Widgets/: CellRendererBadge.vala  ContainersSidebar.vala  ContainersSidebarRow.vala  HeaderBar.vala  ImageListCategory.vala  ImageListItem.vala  ImageTagListItem.vala  ImagesSourceList.vala  MainView.vala  VolumeListItem.vala  VolumesSourceList.vala
src/Widgets/Dialogs/: AuthDialog.vala  ErrorDialog.vala  RemoveImagesWarningDialog.vala
src/Widgets/Sidebar/: ContainersEntry.vala  ImagesEntry.vala  NetworksEntry.vala  SidebarEntry.vala  SidebarWidget.vala  VolumesEntry.vala
